tests/failing/test20.tail
let v1:S(int,6) = 6 in
let v2:S(int,6) = v1 in
i2d(v2)
